--- a/package.json
+++ b/package.json
@@ -3,21 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@redux-devtools/extension": "^3.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "0.27.2",
     "bootstrap": "5.3.3",
     "lodash": "4.17.21",
+    "nprogress": "^0.2.0",
     "react": "^18.3.1",
     "react-bootstrap": "2.10.4",
     "react-dom": "^18.3.1",
     "react-icons": "4.4.0",
     "react-paginate": "8.1.3",
     "react-pro-sidebar": "0.7.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "6.24.1",
     "react-scripts": "5.0.1",
     "react-toastify": "9.0.7",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "sass": "^1.77.8",
     "web-vitals": "^2.1.4"
   },
