--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "9.0.7",
     "redux": "^5.0.1",
+    "redux-persist": "6.0.0",
     "redux-thunk": "^3.1.0",
     "sass": "^1.77.8",
     "web-vitals": "^2.1.4"
