--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "6.24.1",
     "react-scripts": "5.0.1",
+    "react-scrollbars-custom": "4.1.1",
+    "react-select": "^5.4.0",
     "react-toastify": "9.0.7",
     "redux": "^5.0.1",
     "redux-persist": "6.0.0",
