--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "2.10.4",
     "react-dom": "^18.3.1",
     "react-icons": "4.4.0",
+    "react-modal-image": "2.6.0",
     "react-paginate": "8.1.3",
     "react-pro-sidebar": "0.7.1",
     "react-redux": "^9.1.2",
@@ -27,6 +28,7 @@
     "redux-persist": "6.0.0",
     "redux-thunk": "^3.1.0",
     "sass": "^1.77.8",
+    "uuid": "8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
