--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-i18next": "11.18.3",
     "react-icons": "4.4.0",
     "react-modal-image": "2.6.0",
+    "react-moment": "1.1.3",
     "react-paginate": "8.1.3",
     "react-pro-sidebar": "0.7.1",
     "react-redux": "^9.1.2",
@@ -28,6 +29,7 @@
     "react-scrollbars-custom": "4.1.1",
     "react-select": "^5.4.0",
     "react-toastify": "9.0.7",
+    "recharts": "2.1.13",
     "redux": "^5.0.1",
     "redux-persist": "6.0.0",
     "redux-thunk": "^3.1.0",
